# smiles_api

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  smiles_api.py  supervisord.conf
.github/workflows/: build_push.yml  build_push_aws.yml  deploy.yml
app/: smiles_api.py
